--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,14 +7,13 @@
 .login > button {
   width: 300px;
   background-color: #2e81f4;
-
   color: #eff2f5;
   font-weight: 800;
 }
 
 login > button:hover {
-  background-color: #fff;
-  color: #2e81f4;
+  background-color: #2e81f4;
+  color: #fff;
 }
 
 .login > div > img {
